--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ In the body the main contents of the website are shown
 
   </table>
 <hr size="3" noshade>
-  <img src="/Users/ayanghazi/Desktop/Web dev udemy/HTML personal site/circle_PNG62.png" width="400" height="400" alt="circle stamp" />
+  <img src="circle_PNG62.png" width="400" height="400" alt="circle stamp" />
   <hr size=3 noshade />
   <center><a href="/Users/ayanghazi/Desktop/Web dev udemy/HTML personal site/Contact Us.html">Contact Us</a></center>
 </body>
