--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ In the body the main contents of the website are shown
   <br />
   <dl>
     <dt>
-      <a href="/Users/ayanghazi/Desktop/Web dev udemy/HTML personal site/hobbies.html">Hobbies</a>
+      <a href="hobbies.html">Hobbies</a>
     </dt>
     <dd>My hobbies</dd>
   </dl>
@@ -122,7 +122,7 @@ In the body the main contents of the website are shown
 <hr size="3" noshade>
   <img src="circle_PNG62.png" width="400" height="400" alt="circle stamp" />
   <hr size=3 noshade />
-  <center><a href="/Users/ayanghazi/Desktop/Web dev udemy/HTML personal site/Contact Us.html">Contact Us</a></center>
+  <center><a href="Contact Us.html">Contact Us</a></center>
 </body>
 
 </html>
