--- a/Contact Us.html
+++ b/Contact Us.html
@@ -8,7 +8,7 @@
 
     <h3>Contact Us</h3>
     <div align="right">
-      <a href="/Users/ayanghazi/Desktop/Web dev udemy/HTML personal site/index.html">Go Back</a>
+      <a href="index.html">Go Back</a>
     </div>
     <hr noshade size="3">
     <p>
